Refactor Changelog index - pagination
- Show 3 posts
- Pagination
- Update deployment pipeline to automate URL normalization for paginated URLs (Remove .html from /docs/changelog/page/2.html - Sculpin bug workaround)

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -461,6 +461,15 @@ span#drop-rsaquo {
   transform:rotate(90deg);
   color: #efd01b;
 }
+span#changelog-rsaquo {
+  font-weight:bold;
+  -webkit-transform:rotate(180deg);
+  -moz-transform:rotate(180deg);
+  -ms-transform:rotate(180deg);
+  -o-transform:rotate(180deg);
+  transform:rotate(180deg);
+}
+
 .dropdown:hover span#drop-rsaquo {
   margin-top: 5px !important;
   transition: 500ms all;
@@ -542,9 +551,6 @@ span#drop-rsaquo {
   margin-top: 7px;
 }
 
-.changelog-resp {
-  margin-top: 50px;
-}
 
 @media (max-width: 767px){
     .pio-docs-nav .navbar-nav > li > a {
