Twig extension text, move terminus pages to docs subdir for shared taxonomies

--- a/source/_partials/contributor_box.twig
+++ b/source/_partials/contributor_box.twig
@@ -22,8 +22,7 @@
             <p>{{ contributor.bio }}</p>
             <ul>
             {% for doc in page.contributor_docs %}
-                <li><a href="{{ doc.url }}">{{ doc.title }}</a><br>
-                </li>
+                <li><a href="{{ doc.url }}">{{ doc.title }}</a><br></li>
             {% endfor %}
             </ul>
         </div>
