Replace zeroclipboard with clipboard.js, add events for success and error

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -1806,6 +1806,15 @@ a.btn-primary-inverse:hover:after  {
     color: #222 !important;
 }
 
+
+.btn-clippy {
+  position:absolute;
+  right:15px;
+}
+img.clippy {
+  margin:0px;
+  border:none;
+}
 /* Forms */
 .pio-example-control-sizing select,
 .pio-example-control-sizing input[type="text"] + input[type="text"] {
