Global css tweaks for tab panels

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -2716,3 +2716,11 @@ li.terminus-subcommand-list {
   margin: 0px;
   padding: 0px;
 }
+
+.nav-tabs {
+  padding-left: 20px;
+margin-bottom: 10px;
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+  font-weight: bold;
+}
