Update commands to 1.x

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -2673,7 +2673,7 @@ display: block;
 
 
 }
-li.terminus-subcommand-list {
+li.terminus-usage {
   list-style:none !important;
 }
 .terminus-pager-lsaquo {
