Add development warning to pages site-wide

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -2727,3 +2727,10 @@ margin-bottom: 10px;
 .highlight {
   background: yellow;
 }
+
+.devbar {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+  margin-bottom: 0px !important;
+}
