Add alpha label to menu and manual nav

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -2734,3 +2734,9 @@ margin-bottom: 10px;
   border-color: #faebcc;
   margin-bottom: 0px !important;
 }
+
+
+.label {
+  display: inline-block !important;
+  vertical-align: top !important;
+}
