--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -1808,8 +1808,10 @@ a.btn-primary-inverse:hover:after  {
 
 
 .btn-clippy {
-  position:absolute;
-  right:15px;
+  float: right;
+  margin-left: -1px;
+  border-radius: 0px 4px 4px 0px;
+  line-height: normal;
 }
 img.clippy {
   margin:0px;
@@ -1990,8 +1992,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 4px 0px 0px 4px;
   margin-bottom: 14px;
   word-break: break-word;
 }
@@ -2733,10 +2734,13 @@ margin-bottom: 10px;
   background-color: #fcf8e3;
   border-color: #faebcc;
   margin-bottom: 0px !important;
+  text-align: center;
+  font-weight: bold;
 }
 
 
 .label {
   display: inline-block !important;
   vertical-align: top !important;
+  margin-left: 4px;
 }
