Add script for sending backups to s3, include option to download

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -1828,6 +1828,23 @@ a.btn-primary-inverse:after {
 a.btn-primary-inverse:hover:after  {
     color: #222 !important;
 }
+.btn-download {
+  float: right;
+  margin-top: -3px;
+}
+.script-file-header {
+    width: 100%;
+    position: relative;
+    background-color: #EEF2F3;
+    font-weight: bold;
+    text-align: left;
+    padding: 10px;
+    border-radius: 4px 4px 0px 0px;
+    border: 1px solid #DDE5E7;
+}
+#script-file {
+  border-radius: 0 0 4px 4px !important;
+}
 
 /* Forms */
 .pio-example-control-sizing select,
