Add command dictionary

--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -2630,3 +2630,7 @@ display: block;
 .gs-result .gs-title, .gs-result .gs-title {
   font-size: 20px !important;
 }
+
+.highlight {
+  background: yellow;
+}
