--- a/source/docs/assets/css/main.css
+++ b/source/docs/assets/css/main.css
@@ -4614,6 +4614,10 @@ a:focus {
   .navbar-nav .dropdown > a:after {
     display: none;
   }
+  body {
+    padding-top: 160px;
+  }
+
 }
 @media (max-width: 400px) {
   .helpful__text {
@@ -4631,6 +4635,9 @@ a:focus {
     font-size: 16px !important;
 
   }
+  #changelogs:hover {
+    color: #EFD01B !important;
+}
   a.cta {
     border: none !important;
   }
